--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "html2canvas": "https://esm.sh/html2canvas@1.4.1",
     "docx": "https://esm.sh/docx@9.1.0",
-    "file-saver": "https://esm.sh/file-saver@2.0.5?exports=saveAs",
+    "file-saver": "https://esm.sh/file-saver@2.0.5?bundle",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
